--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ version = "1.15.0"
 description = "A really simple CRUD GraphQL API based on Docker and Python."
 authors = ["joseesco24 <josed.escobar@outlook.com>"]
 readme = "readme.md"
-packages = [{ include = "users_crud_api_python" }]
+packages = [{ include = "*", from = "src" }]
 
 [tool.poetry.dependencies]
 python = "^3.12"
@@ -28,7 +28,6 @@ dill = "^0.3.6"
 flake8 = "^6.0.0"
 pytest = "^7.2.1"
 poetry-plugin-export = "^1.6.0"
-
 
 [build-system]
 requires = ["poetry-core"]
