--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
 	"scripts": {
 		"clean-cache": "find . | grep -E \"(/__pycache__$|\\.pyc$|\\.pyo$)\" | xargs rm -rf && rm -r .mypy_cache .pytest_cache",
 		"lint": "flake8 ./src --max-line-length=150 --verbose && mypy --explicit-package-bases ./src",
-		"docker-build-ms-image": "docker-compose -f docker_compose/compose.databases.yaml build",
+		"docker-build-ms-image": "docker-compose -f docker_compose/compose.project.build.yaml build",
 		"docker-start-databases": "docker-compose -f docker_compose/compose.databases.yaml up",
-		"docker-stop-proyect": "docker-compose -f docker_compose/compose.databases.yaml down",
-		"docker-start-proyect": "docker-compose -f docker_compose/compose.databases.yaml up",
+		"docker-stop-proyect": "docker-compose -f docker_compose/compose.project.yaml down",
+		"docker-start-proyect": "docker-compose -f docker_compose/compose.project.yaml up",
 		"start-dev": "APP_ENVIRONMENT_MODE=development python src/main.py",
 		"start-app": "APP_ENVIRONMENT_MODE=production python src/main.py",
 		"format": "black ./src --line-length=150",
