--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 		"clean-cache": "find . | grep -E \"(/__pycache__$|\\.pyc$|\\.pyo$)\" | xargs rm -rf && rm -r .mypy_cache .pytest_cache",
 		"lint": "flake8 ./src --max-line-length=150 --verbose && mypy --explicit-package-bases ./src",
 		"docker-build-ms-image": "docker-compose -f docker_compose/compose.project.build.yaml build",
+		"docker-stop-databases": "docker-compose -f docker_compose/compose.databases.yaml down",
 		"docker-start-databases": "docker-compose -f docker_compose/compose.databases.yaml up",
 		"docker-stop-proyect": "docker-compose -f docker_compose/compose.project.yaml down",
 		"docker-start-proyect": "docker-compose -f docker_compose/compose.project.yaml up",
