--- a/docker_compose/compose.project.build.yaml
+++ b/docker_compose/compose.project.build.yaml
@@ -4,5 +4,5 @@ services:
   users_crud_api_python_app:
     image: ghcr.io/joseesco24/users_crud_api_python:latest
     build:
-      dockerfile: dockerfile
+      dockerfile: Dockerfile
       context: ../.
